testsuite/tests/backpack/should_fail/bkpfail03.stderr
[1 of 3] Processing q
  [1 of 2] Compiling M1               ( q/M1.hs, nothing )
  [2 of 2] Compiling M2[sig]          ( q/M2.hsig, nothing )
[2 of 3] Processing m2
  Instantiating main-m2
  [1 of 1] Compiling M2               ( m2/M2.hs, nothing )
[3 of 3] Processing p
  Instantiating main-p
  [1 of 2] Including main-m2
  [2 of 2] Including main-q
    Instantiating main-q(main-m2:M2)
    [1 of 2] Compiling M1               ( q/M1.hs, nothing )
    [2 of 2] Compiling M2[sig]          ( q/M2.hsig, nothing )

bkpfail03.bkp:3:9: error:
    ‘M’ is exported by the hsig file, but not exported by the module
